--- a/.env
+++ b/.env
@@ -1,13 +1,17 @@
 # Public Environment Variables
 NEXT_PUBLIC_CURRENCY=$
-NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=''
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_YXJyaXZpbmctZ29iYmxlci0yNi5jbGVyay5hY2NvdW50cy5kZXYk
+
 
 # Private Environment Variables
-CLERK_SECRET_KEY=''
-MONGODB_URI=''
+CLERK_SECRET_KEY=sk_test_eB4QragTaNnO8zVzF57SVioxAHEBkgZqwFtgqEIH8g
+MONGODB_URI='mongodb+srv://harshitbhan2004_db_user:081204hb@cluster0.iyb6bok.mongodb.net'
 INNGEST_SIGNING_KEY=''
 INNGEST_EVENT_KEY=''
 # Cloudinary
 CLOUDINARY_CLOUD_NAME =''
 CLOUDINARY_API_KEY =''
 CLOUDINARY_API_SECRET =''
+
+
+/?appName=Cluster0
