--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.36.2",
+    "inngest": "^3.48.0",
     "mongodb": "^7.0.0",
     "mongoose": "^9.0.1",
     "next": "^16.0.8",
