--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.36.2",
+    "axios": "^1.13.2",
+    "cloudinary": "^2.8.0",
     "inngest": "^3.48.0",
     "mongodb": "^7.0.0",
     "mongoose": "^9.0.1",
